--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -79,7 +79,7 @@
 														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="device.technician_id" required>
 															<option value="">Select</option>
 														</select>
-														<small class="pull-right"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
+														<small class="pull-right"><a ng-click="cancel()" ui-sref="app.admin.support.technician">Add Technician</a></small>
 													</div>
 												</div>
 												
